# asynchronous-duet

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  analyze.ipynb  build.sh  duetbench.py  duetconfig.py  example.duet.yml  index.md  log.md  make-archive.sh  move-images.sh  process-renaissance.py  requirements.txt  results.renaissance.test.csv  run-instance.sh  run.sh  setup.cfg
.github/workflows/: python-app.yml
benchmarks/: duetbench.py  duetbench.sh  process-renaissance.py
benchmarks/barrier/: Dockerfile  Makefile  install-ubench-agent.sh  make-barrier.c  rm-barrier
benchmarks/dacapo/: Dockerfile  duet.yml  test.duet.yml
benchmarks/images/renaissance-alpine/: Dockerfile  install.sh  process-renaissance.py  process.sh
benchmarks/images/renaissance-openjdk/: Dockerfile  install.sh  process.sh  run.sh  (+1 more)
benchmarks/renaissance/: Dockerfile  duet.yml  example.duet.yml  renaissance.duet.yml  test.duet.yml
benchmarks/scalabench/: Dockerfile  duet.yml  test.duet.yml
benchmarks/speccpu/: Dockerfile  build_args_from_duet_conf.py  duet-gcc-linux-x86.cfg  duet.yml  test.duet.yml
duet/: __init__.py  analyze.ipynb  analyze_tools.py  bench.py  config.py  constants.py  duetbench.py  duetconfig.py  duetprocess.py  overlapplot.ipynb  parsers_artifact.py  parsers_benchmark.py  process-renaissance.py  process.py  process_renaissance.py
duet-data-and-scripts/: get-ratio-ci.r  get-weighted-ratios.r  parallel.r  plot-ratio-ci.r
notebooks/: common.py  figures  mds.ipynb  overlaps.ipynb  rq1.ipynb  rq3.ipynb  rq4.ipynb  runtime.ipynb  thesisplots.ipynb  variation.ipynb  verification.ipynb
results.renaissance.test/: chi-square.0.A.results.json  chi-square.0.B.results.json  chi-square.1.A.results.json  chi-square.1.B.results.json
tests/: test_duetbench.py  test_duetprocess.py
