[metadata]
name = duet
version = 0.0.1
description = Asynchronous duet benchmark tools
long_description = file: README.md, LICENSE
keywords = benchmark
license = Apache License Version 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = duet
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    duetbench = duet.duetbench:main

[options.extras_require]
process =
    pandas
analyze =
    pandas
    numpy
    bokeh

[options.packages.find]
exclude =
    docs
    tests
