[metadata]
name = duet
version = 0.0.1
description = Asynchronous duet benchmark tools
long_description = file: README.md, LICENSE
keywords = benchmark
license = Apache License Version 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = duet
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    duetbench = duet.duetbench:main
    process_renaissance = duet.process_renaissance:main

[options.extras_require]
all =
    pandas
    numpy
    bokeh
process =
    pandas
analyze =
    ipykernel
    pandas
    numpy
    bokeh

[options.packages.find]
exclude =
    docs
    tests
