[metadata]
name = duet
version = 0.0.2
description = Asynchronous duet benchmark tools
long_description = file: README.md, LICENSE
keywords = benchmark
license = Apache License Version 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = duet
install_requires =
    pyyaml
    pandas
    numpy
    ipykernel
    plotly
    pytest

[options.entry_points]
console_scripts =
    duetbench = duet.bench:main
    duetprocess = duet.process:main

[options.packages.find]
exclude =
    docs
    tests
